[gd_scene load_steps=7 format=3 uid="uid://bben4vnlgykgv"]

[ext_resource type="Script" path="res://addons/igt/topics/common/pointing_hand.gd" id="1_0tsy5"]
[ext_resource type="Texture2D" uid="uid://b65voayvgijs" path="res://addons/igt/topics/common/hand_small.png" id="1_prv3x"]
[ext_resource type="Texture2D" uid="uid://b5bds3tpbkcrv" path="res://addons/igt/topics/common/fish_small.png" id="3_yqm0g"]

[sub_resource type="Animation" id="Animation_cmbjd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Highlight/HandPosition/HandTexture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(20, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Highlight/HandPosition/FishTexture:rotation")
tracks/1/interp = 4
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_8b5m4"]
resource_name = "bounce"
length = 0.7
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Highlight/HandPosition/HandTexture:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-5, 0), Vector2(5, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Highlight/HandPosition/FishTexture:rotation")
tracks/1/interp = 4
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.0349066, 0.0349066]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_alm7o"]
_data = {
"RESET": SubResource("Animation_cmbjd"),
"bounce": SubResource("Animation_8b5m4")
}

[node name="PointingHand" type="Control"]
z_as_relative = false
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_0tsy5")

[node name="Highlight" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
color = Color(0.141176, 0.588235, 0.462745, 0.254902)

[node name="HandPosition" type="Control" parent="Highlight"]
layout_mode = 3
anchors_preset = 0
offset_left = 40.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 94.0
mouse_filter = 2

[node name="HandTexture" type="TextureRect" parent="Highlight/HandPosition"]
layout_mode = 0
offset_left = 20.0
offset_right = 104.0
offset_bottom = 78.0
mouse_filter = 2
texture = ExtResource("1_prv3x")
flip_h = true

[node name="FishTexture" type="TextureRect" parent="Highlight/HandPosition"]
visible = false
layout_mode = 0
offset_left = -30.0
offset_top = -40.0
offset_right = 98.0
offset_bottom = 75.0
pivot_offset = Vector2(64, 55)
mouse_filter = 2
texture = ExtResource("3_yqm0g")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_alm7o")
}

[node name="Node" type="Node" parent="AnimationPlayer"]
